--- a/IRIS-KNN Model.ipynb
+++ b/IRIS-KNN Model.ipynb
@@ -15,87 +15,175 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<bound method NDFrame.head of        0    1    2    3\n",
-      "0    5.1  3.5  1.4  0.2\n",
-      "1    4.9  3.0  1.4  0.2\n",
-      "2    4.7  3.2  1.3  0.2\n",
-      "3    4.6  3.1  1.5  0.2\n",
-      "4    5.0  3.6  1.4  0.2\n",
-      "5    5.4  3.9  1.7  0.4\n",
-      "6    4.6  3.4  1.4  0.3\n",
-      "7    5.0  3.4  1.5  0.2\n",
-      "8    4.4  2.9  1.4  0.2\n",
-      "9    4.9  3.1  1.5  0.1\n",
-      "10   5.4  3.7  1.5  0.2\n",
-      "11   4.8  3.4  1.6  0.2\n",
-      "12   4.8  3.0  1.4  0.1\n",
-      "13   4.3  3.0  1.1  0.1\n",
-      "14   5.8  4.0  1.2  0.2\n",
-      "15   5.7  4.4  1.5  0.4\n",
-      "16   5.4  3.9  1.3  0.4\n",
-      "17   5.1  3.5  1.4  0.3\n",
-      "18   5.7  3.8  1.7  0.3\n",
-      "19   5.1  3.8  1.5  0.3\n",
-      "20   5.4  3.4  1.7  0.2\n",
-      "21   5.1  3.7  1.5  0.4\n",
-      "22   4.6  3.6  1.0  0.2\n",
-      "23   5.1  3.3  1.7  0.5\n",
-      "24   4.8  3.4  1.9  0.2\n",
-      "25   5.0  3.0  1.6  0.2\n",
-      "26   5.0  3.4  1.6  0.4\n",
-      "27   5.2  3.5  1.5  0.2\n",
-      "28   5.2  3.4  1.4  0.2\n",
-      "29   4.7  3.2  1.6  0.2\n",
-      "..   ...  ...  ...  ...\n",
-      "120  6.9  3.2  5.7  2.3\n",
-      "121  5.6  2.8  4.9  2.0\n",
-      "122  7.7  2.8  6.7  2.0\n",
-      "123  6.3  2.7  4.9  1.8\n",
-      "124  6.7  3.3  5.7  2.1\n",
-      "125  7.2  3.2  6.0  1.8\n",
-      "126  6.2  2.8  4.8  1.8\n",
-      "127  6.1  3.0  4.9  1.8\n",
-      "128  6.4  2.8  5.6  2.1\n",
-      "129  7.2  3.0  5.8  1.6\n",
-      "130  7.4  2.8  6.1  1.9\n",
-      "131  7.9  3.8  6.4  2.0\n",
-      "132  6.4  2.8  5.6  2.2\n",
-      "133  6.3  2.8  5.1  1.5\n",
-      "134  6.1  2.6  5.6  1.4\n",
-      "135  7.7  3.0  6.1  2.3\n",
-      "136  6.3  3.4  5.6  2.4\n",
-      "137  6.4  3.1  5.5  1.8\n",
-      "138  6.0  3.0  4.8  1.8\n",
-      "139  6.9  3.1  5.4  2.1\n",
-      "140  6.7  3.1  5.6  2.4\n",
-      "141  6.9  3.1  5.1  2.3\n",
-      "142  5.8  2.7  5.1  1.9\n",
-      "143  6.8  3.2  5.9  2.3\n",
-      "144  6.7  3.3  5.7  2.5\n",
-      "145  6.7  3.0  5.2  2.3\n",
-      "146  6.3  2.5  5.0  1.9\n",
-      "147  6.5  3.0  5.2  2.0\n",
-      "148  6.2  3.4  5.4  2.3\n",
-      "149  5.9  3.0  5.1  1.8\n",
-      "\n",
-      "[150 rows x 4 columns]>\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[ 5.1,  3.5,  1.4,  0.2],\n",
+       "       [ 4.9,  3. ,  1.4,  0.2],\n",
+       "       [ 4.7,  3.2,  1.3,  0.2],\n",
+       "       [ 4.6,  3.1,  1.5,  0.2],\n",
+       "       [ 5. ,  3.6,  1.4,  0.2],\n",
+       "       [ 5.4,  3.9,  1.7,  0.4],\n",
+       "       [ 4.6,  3.4,  1.4,  0.3],\n",
+       "       [ 5. ,  3.4,  1.5,  0.2],\n",
+       "       [ 4.4,  2.9,  1.4,  0.2],\n",
+       "       [ 4.9,  3.1,  1.5,  0.1],\n",
+       "       [ 5.4,  3.7,  1.5,  0.2],\n",
+       "       [ 4.8,  3.4,  1.6,  0.2],\n",
+       "       [ 4.8,  3. ,  1.4,  0.1],\n",
+       "       [ 4.3,  3. ,  1.1,  0.1],\n",
+       "       [ 5.8,  4. ,  1.2,  0.2],\n",
+       "       [ 5.7,  4.4,  1.5,  0.4],\n",
+       "       [ 5.4,  3.9,  1.3,  0.4],\n",
+       "       [ 5.1,  3.5,  1.4,  0.3],\n",
+       "       [ 5.7,  3.8,  1.7,  0.3],\n",
+       "       [ 5.1,  3.8,  1.5,  0.3],\n",
+       "       [ 5.4,  3.4,  1.7,  0.2],\n",
+       "       [ 5.1,  3.7,  1.5,  0.4],\n",
+       "       [ 4.6,  3.6,  1. ,  0.2],\n",
+       "       [ 5.1,  3.3,  1.7,  0.5],\n",
+       "       [ 4.8,  3.4,  1.9,  0.2],\n",
+       "       [ 5. ,  3. ,  1.6,  0.2],\n",
+       "       [ 5. ,  3.4,  1.6,  0.4],\n",
+       "       [ 5.2,  3.5,  1.5,  0.2],\n",
+       "       [ 5.2,  3.4,  1.4,  0.2],\n",
+       "       [ 4.7,  3.2,  1.6,  0.2],\n",
+       "       [ 4.8,  3.1,  1.6,  0.2],\n",
+       "       [ 5.4,  3.4,  1.5,  0.4],\n",
+       "       [ 5.2,  4.1,  1.5,  0.1],\n",
+       "       [ 5.5,  4.2,  1.4,  0.2],\n",
+       "       [ 4.9,  3.1,  1.5,  0.1],\n",
+       "       [ 5. ,  3.2,  1.2,  0.2],\n",
+       "       [ 5.5,  3.5,  1.3,  0.2],\n",
+       "       [ 4.9,  3.1,  1.5,  0.1],\n",
+       "       [ 4.4,  3. ,  1.3,  0.2],\n",
+       "       [ 5.1,  3.4,  1.5,  0.2],\n",
+       "       [ 5. ,  3.5,  1.3,  0.3],\n",
+       "       [ 4.5,  2.3,  1.3,  0.3],\n",
+       "       [ 4.4,  3.2,  1.3,  0.2],\n",
+       "       [ 5. ,  3.5,  1.6,  0.6],\n",
+       "       [ 5.1,  3.8,  1.9,  0.4],\n",
+       "       [ 4.8,  3. ,  1.4,  0.3],\n",
+       "       [ 5.1,  3.8,  1.6,  0.2],\n",
+       "       [ 4.6,  3.2,  1.4,  0.2],\n",
+       "       [ 5.3,  3.7,  1.5,  0.2],\n",
+       "       [ 5. ,  3.3,  1.4,  0.2],\n",
+       "       [ 7. ,  3.2,  4.7,  1.4],\n",
+       "       [ 6.4,  3.2,  4.5,  1.5],\n",
+       "       [ 6.9,  3.1,  4.9,  1.5],\n",
+       "       [ 5.5,  2.3,  4. ,  1.3],\n",
+       "       [ 6.5,  2.8,  4.6,  1.5],\n",
+       "       [ 5.7,  2.8,  4.5,  1.3],\n",
+       "       [ 6.3,  3.3,  4.7,  1.6],\n",
+       "       [ 4.9,  2.4,  3.3,  1. ],\n",
+       "       [ 6.6,  2.9,  4.6,  1.3],\n",
+       "       [ 5.2,  2.7,  3.9,  1.4],\n",
+       "       [ 5. ,  2. ,  3.5,  1. ],\n",
+       "       [ 5.9,  3. ,  4.2,  1.5],\n",
+       "       [ 6. ,  2.2,  4. ,  1. ],\n",
+       "       [ 6.1,  2.9,  4.7,  1.4],\n",
+       "       [ 5.6,  2.9,  3.6,  1.3],\n",
+       "       [ 6.7,  3.1,  4.4,  1.4],\n",
+       "       [ 5.6,  3. ,  4.5,  1.5],\n",
+       "       [ 5.8,  2.7,  4.1,  1. ],\n",
+       "       [ 6.2,  2.2,  4.5,  1.5],\n",
+       "       [ 5.6,  2.5,  3.9,  1.1],\n",
+       "       [ 5.9,  3.2,  4.8,  1.8],\n",
+       "       [ 6.1,  2.8,  4. ,  1.3],\n",
+       "       [ 6.3,  2.5,  4.9,  1.5],\n",
+       "       [ 6.1,  2.8,  4.7,  1.2],\n",
+       "       [ 6.4,  2.9,  4.3,  1.3],\n",
+       "       [ 6.6,  3. ,  4.4,  1.4],\n",
+       "       [ 6.8,  2.8,  4.8,  1.4],\n",
+       "       [ 6.7,  3. ,  5. ,  1.7],\n",
+       "       [ 6. ,  2.9,  4.5,  1.5],\n",
+       "       [ 5.7,  2.6,  3.5,  1. ],\n",
+       "       [ 5.5,  2.4,  3.8,  1.1],\n",
+       "       [ 5.5,  2.4,  3.7,  1. ],\n",
+       "       [ 5.8,  2.7,  3.9,  1.2],\n",
+       "       [ 6. ,  2.7,  5.1,  1.6],\n",
+       "       [ 5.4,  3. ,  4.5,  1.5],\n",
+       "       [ 6. ,  3.4,  4.5,  1.6],\n",
+       "       [ 6.7,  3.1,  4.7,  1.5],\n",
+       "       [ 6.3,  2.3,  4.4,  1.3],\n",
+       "       [ 5.6,  3. ,  4.1,  1.3],\n",
+       "       [ 5.5,  2.5,  4. ,  1.3],\n",
+       "       [ 5.5,  2.6,  4.4,  1.2],\n",
+       "       [ 6.1,  3. ,  4.6,  1.4],\n",
+       "       [ 5.8,  2.6,  4. ,  1.2],\n",
+       "       [ 5. ,  2.3,  3.3,  1. ],\n",
+       "       [ 5.6,  2.7,  4.2,  1.3],\n",
+       "       [ 5.7,  3. ,  4.2,  1.2],\n",
+       "       [ 5.7,  2.9,  4.2,  1.3],\n",
+       "       [ 6.2,  2.9,  4.3,  1.3],\n",
+       "       [ 5.1,  2.5,  3. ,  1.1],\n",
+       "       [ 5.7,  2.8,  4.1,  1.3],\n",
+       "       [ 6.3,  3.3,  6. ,  2.5],\n",
+       "       [ 5.8,  2.7,  5.1,  1.9],\n",
+       "       [ 7.1,  3. ,  5.9,  2.1],\n",
+       "       [ 6.3,  2.9,  5.6,  1.8],\n",
+       "       [ 6.5,  3. ,  5.8,  2.2],\n",
+       "       [ 7.6,  3. ,  6.6,  2.1],\n",
+       "       [ 4.9,  2.5,  4.5,  1.7],\n",
+       "       [ 7.3,  2.9,  6.3,  1.8],\n",
+       "       [ 6.7,  2.5,  5.8,  1.8],\n",
+       "       [ 7.2,  3.6,  6.1,  2.5],\n",
+       "       [ 6.5,  3.2,  5.1,  2. ],\n",
+       "       [ 6.4,  2.7,  5.3,  1.9],\n",
+       "       [ 6.8,  3. ,  5.5,  2.1],\n",
+       "       [ 5.7,  2.5,  5. ,  2. ],\n",
+       "       [ 5.8,  2.8,  5.1,  2.4],\n",
+       "       [ 6.4,  3.2,  5.3,  2.3],\n",
+       "       [ 6.5,  3. ,  5.5,  1.8],\n",
+       "       [ 7.7,  3.8,  6.7,  2.2],\n",
+       "       [ 7.7,  2.6,  6.9,  2.3],\n",
+       "       [ 6. ,  2.2,  5. ,  1.5],\n",
+       "       [ 6.9,  3.2,  5.7,  2.3],\n",
+       "       [ 5.6,  2.8,  4.9,  2. ],\n",
+       "       [ 7.7,  2.8,  6.7,  2. ],\n",
+       "       [ 6.3,  2.7,  4.9,  1.8],\n",
+       "       [ 6.7,  3.3,  5.7,  2.1],\n",
+       "       [ 7.2,  3.2,  6. ,  1.8],\n",
+       "       [ 6.2,  2.8,  4.8,  1.8],\n",
+       "       [ 6.1,  3. ,  4.9,  1.8],\n",
+       "       [ 6.4,  2.8,  5.6,  2.1],\n",
+       "       [ 7.2,  3. ,  5.8,  1.6],\n",
+       "       [ 7.4,  2.8,  6.1,  1.9],\n",
+       "       [ 7.9,  3.8,  6.4,  2. ],\n",
+       "       [ 6.4,  2.8,  5.6,  2.2],\n",
+       "       [ 6.3,  2.8,  5.1,  1.5],\n",
+       "       [ 6.1,  2.6,  5.6,  1.4],\n",
+       "       [ 7.7,  3. ,  6.1,  2.3],\n",
+       "       [ 6.3,  3.4,  5.6,  2.4],\n",
+       "       [ 6.4,  3.1,  5.5,  1.8],\n",
+       "       [ 6. ,  3. ,  4.8,  1.8],\n",
+       "       [ 6.9,  3.1,  5.4,  2.1],\n",
+       "       [ 6.7,  3.1,  5.6,  2.4],\n",
+       "       [ 6.9,  3.1,  5.1,  2.3],\n",
+       "       [ 5.8,  2.7,  5.1,  1.9],\n",
+       "       [ 6.8,  3.2,  5.9,  2.3],\n",
+       "       [ 6.7,  3.3,  5.7,  2.5],\n",
+       "       [ 6.7,  3. ,  5.2,  2.3],\n",
+       "       [ 6.3,  2.5,  5. ,  1.9],\n",
+       "       [ 6.5,  3. ,  5.2,  2. ],\n",
+       "       [ 6.2,  3.4,  5.4,  2.3],\n",
+       "       [ 5.9,  3. ,  5.1,  1.8]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "iris_pd = load_iris()\n",
     "\n",
-    "iris_pd = pd.DataFrame(iris_pd.data)\n",
-    "print(iris_pd.head)\n"
+    "iris_pd.data\n"
    ]
   },
   {
@@ -186,6 +274,66 @@
    ],
    "source": [
     "!pip install eve"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "//anaconda/envs/api-ml/lib/python3.5/site-packages/sklearn/utils/validation.py:386: DeprecationWarning: Passing 1d arrays as data is deprecated in 0.17 and willraise ValueError in 0.19. Reshape your data either using X.reshape(-1, 1) if your data has a single feature or X.reshape(1, -1) if it contains a single sample.\n",
+      "  DeprecationWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'virginica'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predict([ 6.2,  3.4,  5.4,  2.3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "//anaconda/envs/api-ml/lib/python3.5/site-packages/sklearn/utils/validation.py:386: DeprecationWarning: Passing 1d arrays as data is deprecated in 0.17 and willraise ValueError in 0.19. Reshape your data either using X.reshape(-1, 1) if your data has a single feature or X.reshape(1, -1) if it contains a single sample.\n",
+      "  DeprecationWarning)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'versicolor'"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predict([ 6. ,  2.2,  5. ,  1.5])"
    ]
   },
   {
